# gnome-claude-usage-tracker

./: .editorconfig  .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt
daemon/: __init__.py  api_service.py  claude_usage_daemon.py  dbus_service.py  storage.py
daemon/systemd/: claude-usage-daemon.service
extension/: extension.js  metadata.json  panel-button.js  prefs.js  stylesheet.css
extension/schemas/: org.gnome.shell.extensions.claude-usage.gschema.xml
schemas/: org.gnome.shell.extensions.claude-usage.gschema.xml
